<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <com.kiun.modelcommonsupport.ui.views.NavigatorBar
        app:barTitle="@string/write_card_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/gray"/>

    <EditText
        android:id="@+id/edit_write_card_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:hint="中国银行 储蓄卡"/>

    <EditText
        android:id="@+id/edit_write_card_zone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:hint="@string/select_zone"/>

    <EditText
        android:id="@+id/edit_write_card_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:hint="@string/input_bank_phone_number"/>

    <com.phillipcalvin.iconbutton.IconButton
        android:id="@+id/btn_write_card_next"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_background_shape_radius"
        android:text="@string/next_step"
        app:iconPadding="10dp"/>

</LinearLayout>
