<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.kiun.modelcommonsupport.ui.views.NavigatorBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:barRightTitle="@string/balance_record"
        app:barTitle="@string/balance" />

    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/to_bank_card"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.kiun.modelcommonsupport.ui.views.ATextView
            android:id="@+id/id_balance_bank_cardName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="还未绑定银行卡"
            android:textColor="@color/orange"
            android:textSize="16sp"
            app:dataPath="bankName" />

        <com.kiun.modelcommonsupport.ui.views.ATextView
            android:id="@+id/id_balance_bank_cardNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="@color/orange"
            android:textSize="16sp"
            app:dataPath="cardNo"
            app:maskType="maskBankCardTail"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/amount_balance"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <com.kiun.modelcommonsupport.ui.views.UserEditText
        android:id="@+id/balanceInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:editTitle="¥"
        app:editType="typeNumber"
        app:isWrapContent="true"
        app:textHeight="60dp"
        app:topTitle="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/sum_amount_balance"
            android:textColor="@color/light_black"
            android:textSize="16sp" />

        <com.kiun.modelcommonsupport.ui.views.ATextView
            android:id="@+id/getMaxBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0.0"
            android:textColor="@color/light_black"
            android:textSize="18sp"
            app:dataPath="." />

        <TextView
            android:id="@+id/txt_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/all_balance"
            android:textColor="@color/orange"
            android:textSize="16sp" />
    </LinearLayout>

    <com.phillipcalvin.iconbutton.IconButton
        android:id="@+id/btn_balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="15dp"
        android:background="@drawable/button_background_shape_radius"
        android:text="@string/put_forward"
        android:textColor="#FFF"
        app:iconPadding="10dp" />
</LinearLayout>
